@@ -463,37 +463,35 @@ GetFileIdSets <- function(set=c("case","filecategory"),relation=c("union","inter
   ans
 }
 
-AddToFileCategory<- function(Widget=.rqda$.fnames_rqda,updateWidget=TRUE){
+AddToFileCategory <- function(Widget=.rqda$.fnames_rqda,updateWidget=TRUE){
   ## filenames -> fid -> selfirst=0; selend=nchar(filesource)
   filename <- svalue(Widget)
   Encoding(filename) <- "unknown"
   query <- dbGetQuery(.rqda$qdacon,sprintf("select id, file from source where name in(%s) and status=1",paste("'",filename,"'",sep="",collapse=","))) ## multiple fid
   fid <- query$id
   Encoding(query$file) <- "UTF-8"
-
   ## select a F-cat name -> F-cat id
   Fcat <- dbGetQuery(.rqda$qdacon,"select catid, name from filecat where status=1")
   if (nrow(Fcat)==0){gmessage("Add File Categroy first.",con=TRUE)} else{
     Encoding(Fcat$name) <- "UTF-8"
-    Selected <- gselect.list(Fcat$name,multiple=FALSE)
-    ## CurrentFrame <- sys.frame(sys.nframe())
-    ## RunOnSelected(Fcat$name,multiple=TRUE,enclos=CurrentFrame,expr={
-    if (Selected!=""){ ## must use Selected to represent the value of selected items. see RunOnSelected() for info.
-      ##Selected <- iconv(Selected,to="UTF-8")
-      Encoding(Selected) <- "UTF-8"
-      Fcatid <- Fcat$catid[Fcat$name %in% Selected]
-      exist <- dbGetQuery(.rqda$qdacon,sprintf("select fid from treefile where status=1 and fid in (%s) and catid=%i",paste("'",fid,"'",sep="",collapse=","),Fcatid))
-    if (nrow(exist)!=length(fid)){
-      ## write only when the selected file associated with specific f-cat is not there
-      DAT <- data.frame(fid=fid[!fid %in% exist$fid], catid=Fcatid, date=date(),dateM=date(),memo='',status=1)
-      ## should pay attention to the var order of DAT, must be the same as that of treefile table
-      success <- dbWriteTable(.rqda$qdacon,"treefile",DAT,row.name=FALSE,append=TRUE)
-      ## write to caselinkage table
-      if (success && updateWidget) {
-        UpdateFileofCatWidget()
+    Selecteds <- gselect.list(Fcat$name,multiple=TRUE)
+    if (length(Selecteds)>0 || Selecteds!=""){
+      Encoding(Selecteds) <- "UTF-8"
+      for (Selected in Selecteds) {
+        Fcatid <- Fcat$catid[Fcat$name %in% Selected]
+        exist <- dbGetQuery(.rqda$qdacon,sprintf("select fid from treefile where status=1 and fid in (%s) and catid=%i",paste("'",fid,"'",sep="",collapse=","),Fcatid))
+        if (nrow(exist)!=length(fid)){
+          ## write only when the selected file associated with specific f-cat is not there
+          DAT <- data.frame(fid=fid[!fid %in% exist$fid], catid=Fcatid, date=date(),dateM=date(),memo='',status=1)
+          ## should pay attention to the var order of DAT, must be the same as that of treefile table
+          success <- dbWriteTable(.rqda$qdacon,"treefile",DAT,row.name=FALSE,append=TRUE)
+          ## write to caselinkage table
+          if (success && updateWidget) {
+            UpdateFileofCatWidget()
+          }
+          if (!success) gmessage(sprintf("Fail to write to file category of %s",Selected))
+        }
       }
-      if (!success) gmessage("Fail to write to database.")
-    }
     }
   }
 }
